--- a/Coffee2/index.html
+++ b/Coffee2/index.html
@@ -14,11 +14,11 @@
             <div class="full">Coffee</div>
         </div>
         <p id ="menu">
-            <button onclick="coffeecup()">Dowble espresso</button>
-            <button onclick="coffeecup()">Americano</button>
-            <button onclick="coffeecup()">Espresso</button>
-            <button onclick="fillWater()">FillTankWater</button>
-            <button onclick="fillCoffee()">FillTankCoffee</button>
+            <button onclick="americano.dowbleespresso()">Dowble espresso</button>
+            <button onclick="americano.americano()">Americano</button>
+            <button onclick="americano.espresso()">Espresso</button>
+            <button onclick="americano.fillWater()">FillTankWater</button>
+            <button onclick="americano.fillCoffee()">FillTankCoffee</button>
 
         </p>
     </div>
